2011-04-13  Takashi Kato  <ktakashi@ymail.com>

	* src/port.c (Sg_GetStringFromStringPort): fixed retrieving string process.

2011-04-12  Takashi Kato  <ktakashi@ymail.com>

	* boot/lib/scmlib.scm (rnrs io simple): all (rnrs io simple) functions
	are implemented.

	* src/null.stub (rnrs io port): added custom ports.

	* src/port.c (rnrs io port): added Sg_MakeCustomBinaryPort and
	Sg_MakeCustomTextualPort for custom ports

2011-04-11    <ktakashi@ymail.com>

	* boot/lib/scmlib.scm (rnrs io port): implemented open-bytevector-output-port
	(rnrs io port): added call-with-string/bytevector-output-port.

	* src/null.stub (rnrs io port): implemented most of port functions.
	custom ports are not implemented yet.

2011-04-09    <ktakashi@ymail.com>

	* sitelib/sagittarius/cgen/base.scm (sagittarius): modified arrayref to
	output prettier C.

	* src/null.stub (rnrs io port): added get-bytevector related and
	get-string related functions

2011-04-08  Takashi Kato  <ktakashi@ymail.com>

	* src/bytevector.c (Sg_ByteVectorToString): fixed over reading from
	bytevector.

	* src/null.stub (rnrs bytevectors): added utf32<->string functions.

	* boot/lib/scmlib.scm (rnrs unicode): added string-ci related functions.
	(rnrs bytevectors): added bytevector-uint related
	functions.
	(rnrs lists): added for-all etc.
	(rnrs sorting): added sort functions.

	* src/unicode.c (rnrs unicode): added string-normalize related functions.

	* src/null.stub (rnrs io ports): added some port related functions.

	* src/sagittarius/subr.h (argumentAsCodec): added check macro for codec.

2011-04-07  Takashi Kato  <ktakashi@ymail.com>

	* src/codec.c (utf32): added utf-32 codec implementation.

	* src/unicode.c (rnrs unicode): added string-**case function.

2011-04-06  Takashi Kato  <ktakashi@ymail.com>

	* src/number.c, src/number.h (rationalize): added rationalize.

	* src/unicode.c, src/unicode.h (rnrs unicode): added char related unicode function.

2011-04-05  Takashi Kato  <ktakashi@ymail.com>
